	  the "in" keyword; see test1.uc for examples.
	  Also, added a possible "default" case for converse-case blocks, and a
	  "user_choice" expression which pushes the last-selected answer in the stack.
	* Fixed SI turtle (bug #2020101).
	* Hostile creatures now attack the avatar once more -- and the avatar will
	  also target them when in combat mode (bug #2024437).

2008-07-21	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Modified animation recycles to fix bug #2020103; recycle (if nonzero) is now
	the number of frames at the end of the animation to repeat.

2008-07-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing PNG detection when importing PNGs. Also, added some checks when
	importing shp files.

2008-07-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac: remove AC_PATH_XTRA. Its output is apparently unused
	  and it breaks configure on non-linux platforms

2008-07-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac: fix underquoted help strings
	* various: warnings
	* shapes/weaponinf.cc: fix missing return value
	* usecode/compiler/basic_block.h: fix missing return value

2008-07-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* README.win32: Updated links to more recent versions of MinGW. The file
	  'exult_dev_win32.zip' (that contains several files needed for a MinGW
	  compile), has been updated with a new version of Bison and Flex (both
	  from GNUWin32) in the project shell space. Using the newer versions
	  pointed to in the readme fixes a few problems in recent Win32 snapshots.
	* mapedit/shapeedit.cc: Fixed crash on loading of creatures with bodies
	  in ES.

2008-07-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gameclk.cc, cheat_screen.cc: Reverted previous fix and submited the correct
	  one: forcing palette to apply when it is directly set.
	* actors.cc: Fixed recent invisibility palette bug for avatar. Fixed mixing